--- a/recommend.html
+++ b/recommend.html
@@ -82,6 +82,16 @@
             </div>
             <div class="box doctor hidden">
                 <h2>Doctor</h2>
+                <p>
+                    Dr. Ariya rajput	Gynecologist
+Dr. Rahul Sharma	Cardiologist
+Dr. Priya Patel	Orthopedic Surgeon
+Dr. Aryan Singh	Gynecologist
+Dr. Neha Gupta	Psychiatrist
+Dr. Rajesh Kumar	Dermatologist
+Dr. Shreya Shah	Endocrinologist
+
+                </p>
             </div>
         </div>
     </body>
