--- a/appointment.html
+++ b/appointment.html
@@ -107,7 +107,16 @@
     <main>
         <section id="doctor-list">
             <h2>Available Doctors</h2>
-            <div id="doctors"></div>
+            <div id="doctors">
+                Dr. Ariya rajput - Gynecologist <be>
+Dr. Rahul Sharma - Cardiologist <br>
+Dr. Priya Patel	- Orthopedic Surgeon <br>
+Dr. Aryan Singh	- Gynecologist <br>
+Dr. Neha Gupta	- Psychiatrist <br>
+Dr. Rajesh Kumar - Dermatologist <br>
+Dr. Shreya Shah - Endocrinologist 
+
+            </div>
         
         </section>
         <section id="appointment-form">
