--- a/appointment.html
+++ b/appointment.html
@@ -108,7 +108,7 @@
         <section id="doctor-list">
             <h2>Available Doctors</h2>
             <div id="doctors">
-                Dr. Ariya rajput - Gynecologist <be>
+                Dr. Ariya rajput - Gynecologist <br>
 Dr. Rahul Sharma - Cardiologist <br>
 Dr. Priya Patel	- Orthopedic Surgeon <br>
 Dr. Aryan Singh	- Gynecologist <br>
