--- a/recommend.html
+++ b/recommend.html
@@ -83,13 +83,14 @@
             <div class="box doctor hidden">
                 <h2>Doctor</h2>
                 <p>
-                    Dr. Ariya rajput	Gynecologist
-Dr. Rahul Sharma	Cardiologist
-Dr. Priya Patel	Orthopedic Surgeon
-Dr. Aryan Singh	Gynecologist
-Dr. Neha Gupta	Psychiatrist
-Dr. Rajesh Kumar	Dermatologist
-Dr. Shreya Shah	Endocrinologist
+                   iv id="doctors">
+                Dr. Ariya rajput - Gynecologist <br>
+Dr. Rahul Sharma - Cardiologist <br>
+Dr. Priya Patel	- Orthopedic Surgeon <br>
+Dr. Aryan Singh	- Gynecologist <br>
+Dr. Neha Gupta	- Psychiatrist <br>
+Dr. Rajesh Kumar - Dermatologist <br>
+Dr. Shreya Shah - Endocrinologist 
 
                 </p>
             </div>
